--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cse231s-s18-seunghan.bae</name>
+	<name>CSE231S-SP2018</name>
 	<comment></comment>
 	<projects>
 	</projects>
